# internal/adapters/middleware/rest/swagger.json
@@ -17,7 +17,7 @@
     "paths": {
         "/api/info": {
             "get": {
-                "description": "Retrieve basic server info like version and configured options",
+                "description": "Query static server info like version and configured options",
                 "produces": [
                     "application/json"
                 ],
@@ -30,7 +30,7 @@
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -44,16 +44,16 @@
                 "produces": [
                     "text/plain"
                 ],
-                "summary": "Ping the server",
+                "summary": "Ping server",
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "Ok",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -63,7 +63,7 @@
         },
         "/api/session": {
             "get": {
-                "description": "Retrieve the current session information (if a session exists)",
+                "description": "Get the current session (if a session exists)",
                 "produces": [
                     "application/json"
                 ],
@@ -76,13 +76,13 @@
                         }
                     },
                     "404": {
-                        "description": "no session found",
+                        "description": "No session found",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -91,22 +91,19 @@
             },
             "post": {
                 "description": "Initiate the authentication flow to create a new session",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Create a new session",
+                "summary": "Initiate a new session",
                 "responses": {
                     "302": {
-                        "description": "Redirect to login",
+                        "description": "Redirect to ...",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -114,14 +111,11 @@
                 }
             },
             "delete": {
-                "description": "Deletes the current session (if a session exists)",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Delete the current session (if a session exists)",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Delete the current session",
+                "summary": "Delete current session",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -130,13 +124,13 @@
                         }
                     },
                     "404": {
-                        "description": "no session found",
+                        "description": "No session found",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -146,24 +140,18 @@
         },
         "/api/session/login": {
             "get": {
-                "description": "Retrieve the current session information (if a session exists)",
+                "description": "Get the login information for the authentication flow associated with the given authentication request",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get current session",
+                "summary": "Get login information",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Handler Name",
-                        "name": "handler",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Benutzer ID",
+                        "description": "Authentication request ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -173,17 +161,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.SessionInfo"
+                            "$ref": "#/definitions/rest.SessionLoginInfo"
                         }
                     },
-                    "404": {
-                        "description": "no session found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -199,15 +187,26 @@
                     "application/json"
                 ],
                 "summary": "Create a new session",
+                "parameters": [
+                    {
+                        "description": "Request parameters",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.SessionLoginRequest"
+                        }
+                    }
+                ],
                 "responses": {
-                    "302": {
-                        "description": "Redirect to Login UI",
+                    "200": {
+                        "description": "Ok",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -217,24 +216,18 @@
         },
         "/api/session/verify": {
             "get": {
-                "description": "Retrieve the current session information (if a session exists)",
+                "description": "Get the verify information for the authentication flow associated with the given authentication request",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Get current session",
+                "summary": "Get verify information",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Handler Name",
-                        "name": "handler",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Benutzer ID",
+                        "description": "Authentication request ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -244,17 +237,17 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.SessionInfo"
+                            "$ref": "#/definitions/rest.SessionVerifyInfo"
                         }
                     },
-                    "404": {
-                        "description": "no session found",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -278,7 +271,7 @@
                         }
                     },
                     "500": {
-                        "description": "server error",
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -288,9 +281,28 @@
         }
     },
     "definitions": {
+        "domain.Verification": {
+            "type": "string",
+            "enum": [
+                "email",
+                "totp",
+                "passkey",
+                "seckey"
+            ],
+            "x-enum-varnames": [
+                "VerificationEmail",
+                "VerificationTOTP",
+                "VerificationPasskey",
+                "VerificationSecKey"
+            ]
+        },
         "rest.ServerInfo": {
             "type": "object",
             "properties": {
+                "base_url": {
+                    "description": "The server's base URL",
+                    "type": "string"
+                },
                 "version": {
                     "description": "The server version",
                     "type": "string"
@@ -302,6 +314,92 @@
             "properties": {
                 "strong_auth": {
                     "type": "boolean"
+                },
+                "user": {
+                    "$ref": "#/definitions/rest.UserInfo"
+                }
+            }
+        },
+        "rest.SessionLoginInfo": {
+            "type": "object",
+            "properties": {
+                "allowed_verifications": {
+                    "description": "AllowedVerifications lists the allowed verification methods for this login flow.\nOnly verification methods from this list are accepted during this login flow.",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Verification"
+                    }
+                },
+                "login_hint": {
+                    "description": "LoginHint contains a hint for the login to use, if any can be derived from context.\nCan be overriden by the user.",
+                    "type": "string"
+                },
+                "remember": {
+                    "description": "Remember indicates the default for whether to remember the login across browser sessions or not.\nCan be overriden by the user.",
+                    "type": "boolean"
+                }
+            }
+        },
+        "rest.SessionLoginRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "ID identifies the authentication request this request refers to",
+                    "type": "string"
+                },
+                "login": {
+                    "description": "Login is the user login to use for the authentication",
+                    "type": "string"
+                },
+                "password": {
+                    "description": "Password is the user password to use for the authentication",
+                    "type": "string"
+                },
+                "remember": {
+                    "description": "Remember indicates whether to remember the given login across browser sessions or not.",
+                    "type": "boolean"
+                },
+                "verification": {
+                    "description": "Verification is the verification method to perform in the next step auf the authentication flow.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/domain.Verification"
+                        }
+                    ]
+                }
+            }
+        },
+        "rest.SessionVerifyInfo": {
+            "type": "object",
+            "properties": {
+                "verification": {
+                    "$ref": "#/definitions/domain.Verification"
+                }
+            }
+        },
+        "rest.UserInfo": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "groups": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "login": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "picture": {
+                    "type": "string"
                 }
             }
         }
